Adds tools and updates spec tables

--- a/artifacts/draft-celi-block-ciph-00.html
+++ b/artifacts/draft-celi-block-ciph-00.html
@@ -883,7 +883,7 @@
 <table cellpadding="3" cellspacing="0" class="tt full center">
 <caption>Block Cipher Algorithm Capabilities Applicability Grid</caption>
 <thead><tr>
-<th class="left">Algorithm</th>
+<th class="left">algorithm</th>
 <th class="left">direction</th>
 <th class="left">keyLen</th>
 <th class="left">dataLen</th>
@@ -902,7 +902,7 @@
 <tbody>
 <tr>
 <td class="left">AES-ECB</td>
-<td class="left">encrypt, decrypt</td>
+<td class="left">"encrypt", "decrypt"</td>
 <td class="left">128, 192, 256</td>
 <td class="left"></td>
 <td class="left"></td>
@@ -919,7 +919,7 @@
 </tr>
 <tr>
 <td class="left">AES-CBC</td>
-<td class="left">encrypt, decrypt</td>
+<td class="left">"encrypt", "decrypt"</td>
 <td class="left">128, 192, 256</td>
 <td class="left"></td>
 <td class="left"></td>
@@ -936,7 +936,7 @@
 </tr>
 <tr>
 <td class="left">AES-OFB</td>
-<td class="left">encrypt, decrypt</td>
+<td class="left">"encrypt", "decrypt"</td>
 <td class="left">128, 192, 256</td>
 <td class="left"></td>
 <td class="left"></td>
@@ -953,7 +953,7 @@
 </tr>
 <tr>
 <td class="left">AES-CFB1</td>
-<td class="left">encrypt, decrypt</td>
+<td class="left">"encrypt", "decrypt"</td>
 <td class="left">128, 192, 256</td>
 <td class="left"></td>
 <td class="left"></td>
@@ -970,7 +970,7 @@
 </tr>
 <tr>
 <td class="left">AES-CFB8</td>
-<td class="left">encrypt, decrypt</td>
+<td class="left">"encrypt", "decrypt"</td>
 <td class="left">128, 192, 256</td>
 <td class="left"></td>
 <td class="left"></td>
@@ -987,7 +987,7 @@
 </tr>
 <tr>
 <td class="left">AES-CFB128</td>
-<td class="left">encrypt, decrypt</td>
+<td class="left">"encrypt", "decrypt"</td>
 <td class="left">128, 192, 256</td>
 <td class="left"></td>
 <td class="left"></td>
@@ -1004,9 +1004,9 @@
 </tr>
 <tr>
 <td class="left">AES-CTR</td>
-<td class="left">encrypt, decrypt</td>
+<td class="left">"encrypt", "decrypt"</td>
 <td class="left">128, 192, 256</td>
-<td class="left">See Section 2.3</td>
+<td class="left">Min: 1, Max: 128, Increment: any</td>
 <td class="left"></td>
 <td class="left"></td>
 <td class="left"></td>
@@ -1021,18 +1021,324 @@
 </tr>
 <tr>
 <td class="left">AES-GCM</td>
-<td class="left">encrypt, decrypt</td>
+<td class="left">"encrypt", "decrypt"</td>
 <td class="left">128, 192, 256</td>
-<td class="left">See Section 2.3</td>
-<td class="left">See Section 2.3</td>
-<td class="left">internal, external</td>
-<td class="left">8.2.1, 8.2.2</td>
-<td class="left">See Section 2.3</td>
-<td class="left">See Section 2.3</td>
+<td class="left">Min: 1, Max: xxx, Increment: any</td>
+<td class="left">Min: 8, Max: 1024, Increment: any</td>
+<td class="left">"internal", "external"</td>
+<td class="left">"8.2.1", "8.2.2"</td>
+<td class="left"></td>
+<td class="left">Min: 1, Max: xxx, Increment: any</td>
+<td class="left">32, 64, 96, 104, 112, 120, 128</td>
 <td class="left"></td>
 <td class="left"></td>
 <td class="left"></td>
 <td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">AES-XPN</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left">128, 192, 256</td>
+<td class="left">Min: 1, Max: xxx, Increment: any</td>
+<td class="left">Min: 8, Max: 1024, Increment: any</td>
+<td class="left">"internal", "external"</td>
+<td class="left">"8.2.1", "8.2.2"</td>
+<td class="left">"internal", "external"</td>
+<td class="left">Min: 1, Max: xxx, Increment: any</td>
+<td class="left">32, 64, 96, 104, 112, 120, 128</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">AES-CCM</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left">128, 192, 256</td>
+<td class="left">Min: 0, Max: 256, Increment: 8</td>
+<td class="left">Min: 56, Max: 104, Increment: 8</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">Min: 0, Max: 524288, Increment: any</td>
+<td class="left">Min: 32, Max: 128, Increment: 16</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">AES-KW</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left">128, 192, 256</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">"cipher", "inverse"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">AES-KWP</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left">128, 192, 256</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">"cipher", "inverse"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">AES-XTS</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left">128, 256</td>
+<td class="left">Min: 128, Max: 2^20, Increment: any</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">"hex", "number"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-ECB</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CBC</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CBCI</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CFB1</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CFB8</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CFB64</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CFBP1</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CFBP8</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CFBP64</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-OFB</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-OFBI</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left"></td>
+<td class="left"></td>
+</tr>
+<tr>
+<td class="left">TDES-CTR</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left">Min: 1, Max: 64, Increment: any</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
+<td class="left">true, false</td>
+<td class="left">true, false</td>
+</tr>
+<tr>
+<td class="left">TDES-KW</td>
+<td class="left">"encrypt", "decrypt"</td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left"></td>
+<td class="left">"cipher", "inverse"</td>
+<td class="left"></td>
+<td class="left">1, 2 Note: 2 is only available for decrypt operations</td>
 <td class="left"></td>
 <td class="left"></td>
 </tr>
