--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -473,7 +473,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed., Vassilev, A., Ed., and H. Booth" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-fussell-acvp-spec-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2018-10-1" />
+  <meta name="dct.issued" scheme="ISO8601" content="2018-10-2" />
   <meta name="dct.abstract" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the algorithm implementations in the cryptographic module with a validation authority." />
   <meta name="description" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the algorithm implementations in the cryptographic module with a validation authority." />
 
@@ -497,7 +497,7 @@
   <td class="right">A. Vassilev, Ed.</td>
 </tr>
 <tr>
-  <td class="left">Expires: April 4, 2019</td>
+  <td class="left">Expires: April 5, 2019</td>
   <td class="right">H. Booth</td>
 </tr>
 <tr>
@@ -506,7 +506,7 @@
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">October 1, 2018</td>
+  <td class="right">October 2, 2018</td>
 </tr>
 
     	
@@ -526,7 +526,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on April 4, 2019.</p>
+<p>This Internet-Draft will expire on April 5, 2019.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -679,7 +679,7 @@
 </ul>
 
 <p> </p>
-<p id="rfc.section.3.2.p.3">With that in mind there are several expectations when building a server used as a validation authority. A validation authority shall use HTTPS <a href="#RFC7230">[RFC7230]</a>, TLS 1.2 <a href="#RFC5246">[RFC5246]</a> or greater and mutual authentication. Therefore a client that expects to be used with a validation authority shall have the same requirements. A server, proxy or client developed for the purposes of internal organizational testing only may chose not to include some of those features.</p>
+<p id="rfc.section.3.2.p.3">With that in mind there are several expectations when building a server used as a validation authority. A validation authority SHALL use HTTPS <a href="#RFC7230">[RFC7230]</a>, TLS 1.2 <a href="#RFC5246">[RFC5246]</a> or greater and mutual authentication. Therefore a client that expects to be used with a validation authority SHALL have the same requirements. A server, proxy or client developed for the purposes of internal organizational testing only may chose not to include some of those features.</p>
 <h1 id="rfc.section.3.3"><a href="#rfc.section.3.3">3.3.</a> Terminology</h1>
 <p id="rfc.section.3.3.p.1">TBD </p>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> Architecture</h1>
@@ -691,7 +691,7 @@
   <li>ACV Server - Sends JSON formatted messaging and test data to the ACV client and processes test responses.</li>
   <li>ACV Proxy - Resides between the ACV server and ACV client to proxy the connection for the client. This is particularly useful when the client does not support TLS, key management or have signature capabilities and they are required by the server. An example architecture is provided in Figure 3.</li>
   <li>Device Under Test - Contains the crypto module under test which can include various algorithms and functions that encrypt/decrypt, generate keys, signatures, perform varifications and DRBG functions. May also contain the ACVP client.</li>
-  <li>Crpyographic Module API - This is the interface, manual or otherwise, to the crypto module. This interface is environment specific and will vary depending on the crypto module and may not be limited to real-time operation. </li>
+  <li>Cryptographic Module API - This is the interface, manual or otherwise, to the crypto module. This interface is environment specific and will vary depending on the crypto module and may not be limited to real-time operation. </li>
 </ul>
 
 <p> </p>
@@ -959,7 +959,7 @@
 <p id="rfc.section.9.p.1">The version of the ACVP protocol will be carried with each message and will contain a simple major.minor format. Major version changes will not be backward compatible, however additions and enhancements that do not disrupt compatibility will be indicated with a minor version change. A server may accept a down-level version from the client if it can process at a lower level. If not, it will reject the session. All subsequent messages will carry the negotiated version value.</p>
 <h1 id="rfc.section.10"><a href="#rfc.section.10">10.</a> Messaging</h1>
 <h1 id="rfc.section.10.1"><a href="#rfc.section.10.1">10.1.</a> Product Registration/Capabilities Exchange</h1>
-<p id="rfc.section.10.1.p.1">The product registration will utilize the URI resources <a href="#uriResources">Section 5.2</a> to register and provide cryptographic capabilities.  This exchange will consist of several message exchanges and carry the Company name, primary contact (OE information) as well as a detailed list of the supported cryptographic algorithms and their options to be tested during the testSession. </p>
+<p id="rfc.section.10.1.p.1">The product registration will utilize the URI resources <a href="#uriResources">Section 5.2</a> to register and provide cryptographic capabilities.  This exchange will consist of several message exchanges and carry the Company name, primary contact (OE information) as well as a detailed list of the supported cryptographic algorithms and their options to be tested during the testSession, see <a href="#xml_msgFlows">Figure 8</a>. </p>
 <h1 id="rfc.section.10.2"><a href="#rfc.section.10.2">10.2.</a> Test Exchange</h1>
 <p id="rfc.section.10.2.p.1">The test exchange consists of the ACV client requesting a particular vectorSet associated with the testSession. The server responds with the vectorSet. The client has the option to process the vectorSet and return results(realtime) or request more vectorSets for processing at a later time(non-realtime).  The client will repeat this process until all of the tests in the session test list have been processed. Once a vectorSet result has been POSTed to the server the client may request success/failure results from the server at any time, however if vectorSets have not been completed the overall status will be incomplete.  A minimal message flow is described below <a href="#xml_msgFlows">Figure 8</a>. </p>
 <h1 id="rfc.section.11"><a href="#rfc.section.11">11.</a> Message Formats</h1>
@@ -1007,7 +1007,7 @@
          </pre>
 <p class="figure">Figure 6</p>
 <h1 id="rfc.section.11.1.2"><a href="#rfc.section.11.1.2">11.1.2.</a> <a href="#jwtExpire" id="jwtExpire">JWT Expiration/Renewal</a></h1>
-<p id="rfc.section.11.1.2.p.1">The JWT access tokens received from either the /login server endpoint should be set to expire after a pre-defined period, The specific length of the expiration period is out of scope for this specification. However, the expiration period length impacts both the security and protocol overhead. Longer expiration periods reduce the overhead but increase the window for attacks.  Attempting to access a service with an expired JWT shall result in a "401 Unauthorized" HTTP status code.  A client may renew an expired JWT access token using the mechanism shown in            <a href="#xml_figureRenewalFlows">Figure 7</a> below. </p>
+<p id="rfc.section.11.1.2.p.1">The JWT access tokens received from either the /login server endpoint should be set to expire after a pre-defined period, The specific length of the expiration period is out of scope for this specification. However, the expiration period length impacts both the security and protocol overhead. Longer expiration periods reduce the overhead but increase the window for attacks.  Attempting to access a service with an expired JWT SHALL result in a "401 Unauthorized" HTTP status code.  A client may renew an expired JWT access token using the mechanism shown in            <a href="#xml_figureRenewalFlows">Figure 7</a> below. </p>
 <div id="rfc.figure.7"/>
 <div id="xml_figureRenewalFlows"/>
 <p>JWT access token renewal flows. All exchanges shown are over HTTP.</p>
@@ -2202,12 +2202,12 @@
   </tbody>
 </table>
 <h1 id="rfc.appendix.A"><a href="#rfc.appendix.A">Appendix A.</a> <a href="#app-reg-ex" id="app-reg-ex">JSON Formatting Guidelines</a></h1>
-<p id="rfc.section.A.p.1">All JSON keywords shall use lower camelCase format with no underscores or hyphens and use the following characters only a-z, A-Z, 0-9. Keywords shall abbreviate common words and phrases wherever possible for brevity.</p>
+<p id="rfc.section.A.p.1">All JSON keywords SHALL use lower camelCase format with no underscores or hyphens and use the following characters only a-z, A-Z, 0-9. Keywords SHALL abbreviate common words and phrases wherever possible for brevity.</p>
 <p id="rfc.section.A.p.2">For example: password length - pwLen plain text length - ptLen </p>
 <p id="rfc.section.A.p.3">Keywords should be chosen such that they are informative and brief, for example: </p>
 <p id="rfc.section.A.p.4">[ { "acvVersion": acvp-version }, { "results" : { "disposition" : "incomplete" } } ] </p>
 <p id="rfc.section.A.p.5">Metadata assigned to the keyword may use any format which best reflects the information being represented including hyphens, underscores alternating case, numbers, etc. However, brevity should be a major consideration, for example:</p>
-<p id="rfc.section.A.p.6">"algorithms" : [ { "algorithm" : "AES-GCM", "mode" : "modes", "ivGen" : "internal", "ivGenMode" : "8.2.1" } All metadata representing strings or big numbers shall use double quotes at both ends. Big numbers require conversion from strings to whatever format is used by the DUT. Numerical values of integer size or with decimal points may use quotations if those values are generally used as a string, for example the acvVersion would generally be used in displaying information not in any mathematical operations. Something like keyLen or ptLen values would be better used without quotes to avoid having to convert the string to an integer for use in the code. </p>
+<p id="rfc.section.A.p.6">"algorithms" : [ { "algorithm" : "AES-GCM", "mode" : "modes", "ivGen" : "internal", "ivGenMode" : "8.2.1" } All metadata representing strings or big numbers SHALL use double quotes at both ends. Big numbers require conversion from strings to whatever format is used by the DUT. Numerical values of integer size or with decimal points may use quotations if those values are generally used as a string, for example the acvVersion would generally be used in displaying information not in any mathematical operations. Something like keyLen or ptLen values would be better used without quotes to avoid having to convert the string to an integer for use in the code. </p>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-reg-ex2" id="app-reg-ex2">JSON Encoded Error Messages</a></h1>
 <p id="rfc.section.B.p.1">TBD </p>
 <h1 id="rfc.authors">
