Minor updates to protocol spec

--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -1651,7 +1651,7 @@
   <li><strong>createdOn</strong> -              <a href="#dateType">date</a> <cite title="NONE">[dateType]</cite> </li>
   <li><strong>expiresOn</strong> -              <a href="#dateType">date</a> <cite title="NONE">[dateType]</cite> </li>
   <li><strong>encryptAtRest</strong> -              <samp>boolean</samp> </li>
-  <li><strong>vectorSetsUrl</strong> <a id="CREF5" class="info">[CREF5]<span class="info">should this instead be an array or should there be two different properties?</span></a> -              <samp>string</samp> </li>
+  <li><strong>vectorSetUrls</strong> <a id="CREF5" class="info">[CREF5]<span class="info">should this instead be an array or should there be two different properties?</span></a> -              <samp>string</samp> </li>
   <li><strong>publishable</strong> <a id="CREF6" class="info">[CREF6]<span class="info">need a better name</span></a> - <samp>boolean</samp>, indicates whether this test session may be submitted for validation </li>
   <li><strong>passed</strong> <a id="CREF7" class="info">[CREF7]<span class="info">disposition for consistency?</span></a> <samp>boolean</samp>, indicates whether all of the vector set tests have passed </li>
   <li><strong>isSample</strong> -              <samp>boolean</samp>, if true <a href="#vectorSet_expected_get">/testSessions/{testSessionId}/vectorSets/{vectorSetId}/expected</a> <cite title="NONE">[vectorSet_expected_get]</cite> will return expected result values. As well, Test Vector Sets MAY contain fewer Test Cases for quicker generation and verification.  </li>
