"GDT" meaning, AFT consistency per test type definition

--- a/artifacts/acvp_sub_dsa.html
+++ b/artifacts/acvp_sub_dsa.html
@@ -587,10 +587,10 @@
 
 <ul class="empty">
 <li>DSA / keyGen "AFT" - Algorithm Functional Test. The IUT is REQUIRED for each test case provided, to generate a key pair based on a generated group level PQG. This information is then communicated to the ACVP server and validated.  </li>
-<li>DSA / pqgGen "GDT". The IUT in this test mode is REQUIRED to generate PQ or G as a response to the ACVP provided test vector set.  </li>
-<li>DSA / pqgVer "GDT". In this test mode, the ACVP server is REQUIRED to generate domain parameters for transmission to the IUT. The IUT is expected to evaluate the validity of the domain parameters.  </li>
-<li>DSA / sigGen "AFT". This testing mode expects the IUT to generate valid signatures based on the ACVP provided message.  The IUT communicates the PQG, public key, and signature to the ACVP server, and the signature is then validated.  </li>
-<li>DSA / sigVer "AFT". The ACVP server generates a series of signatures to communicate to the IUT. The IUT is REQUIRED to determine the validity of the signature given the PQG, key, and message.  </li>
+<li>DSA / pqgGen "GDT" - Generated Data Test. The IUT in this test mode is REQUIRED to generate PQ or G as a response to the ACVP provided test vector set.  </li>
+<li>DSA / pqgVer "GDT" - Generated Data Test. In this test mode, the ACVP server is REQUIRED to generate domain parameters for transmission to the IUT. The IUT is expected to evaluate the validity of the domain parameters.  </li>
+<li>DSA / sigGen "AFT" - Algorithm Functional Test. This testing mode expects the IUT to generate valid signatures based on the ACVP provided message.  The IUT communicates the PQG, public key, and signature to the ACVP server, and the signature is then validated.  </li>
+<li>DSA / sigVer "AFT" - Algorithm Functional Test. The ACVP server generates a series of signatures to communicate to the IUT. The IUT is REQUIRED to determine the validity of the signature given the PQG, key, and message.  </li>
 </ul>
 
 <p> </p>
