--- a/artifacts/draft-celi-block-ciph-00.html
+++ b/artifacts/draft-celi-block-ciph-00.html
@@ -427,7 +427,7 @@
 
   <meta name="dct.creator" content="Celi, C., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-celi-block-ciph-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2018-11-8" />
+  <meta name="dct.issued" scheme="ISO8601" content="2018-11-30" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using symmetric block cipher algorithms with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using symmetric block cipher algorithms with the ACVP specification." />
 
@@ -448,10 +448,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Informational</td>
-<td class="right">November 8, 2018</td>
+<td class="right">November 30, 2018</td>
 </tr>
 <tr>
-<td class="left">Expires: May 12, 2019</td>
+<td class="left">Expires: June 3, 2019</td>
 <td class="right"></td>
 </tr>
 
@@ -468,7 +468,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on May 12, 2019.</p>
+<p>This Internet-Draft will expire on June 3, 2019.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2018 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -3285,13 +3285,11 @@ POST [
 			"tgId": 1,
 			"tests": [{
 					"tcId": 67,
-					"ct": "00",
-					"payloadLen": "1"
+					"ct": "00"
 				},
 				{
 					"tcId": 68,
-					"ct": "80",
-					"payloadLen": "1"
+					"ct": "80"
 				}
 			]
 		},
@@ -3299,21 +3297,18 @@ POST [
 			"tgId": 2,
 			"tests": [{
 					"tcId": 31,
-					"pt": "00",
-					"payloadLen": "1"
+					"pt": "00"
 				},
 				{
 					"tcId": 32,
-					"pt": "80",
-					"payloadLen": "1"
+					"pt": "80"
 				}
 			]
 		},
 		{
 			"tgId": 3,
 			"tests": [{
-				"tcId": 61,
-                "payloadLen": "1",
+				"tcId": 61
 				"resultsArray": [{
 						"key": "A3B254EAB3B0C8C60EF6A659ADE096A3",
 						"iv": "D4A4A028EEA3BCA708A31EB2803AE1AE",
@@ -3331,8 +3326,7 @@ POST [
 		}, {
 			"tgId": 4,
 			"tests": [{
-				"tcId": 64,
-                "payloadLen": "1",
+				"tcId": 64
 				"resultsArray": [{
 						"key": "7C87174CB990272D0F2F2AAEFCCCDFC5",
 						"iv": "75BEE06DEC8A99EC0C7E7FD76ACB0874",
@@ -4099,15 +4093,13 @@ POST [
 				"tgId": 1,
 				"tests": [{
 					"tcId": 1,
-					"ct": "00",
-					"payloadLen": 1
+					"ct": "00"
 				}]
 			},
 			{
 				"tgId": 2,
 				"tests": [{
-					"tcId": 961,
-                    "payloadLen": 1,
+					"tcId": 961
 					"resultsArray": [{
 							"key1": "337C857E01DE54B7",
 							"key2": "F106296828FCCA0D",
