Added /large data flow to section 10.4 diagram

--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -1259,6 +1259,13 @@
          |        |                                   |      |  Retrieve  |                      
          |        |receive results                    |      |Disposition |
          |        |&lt;-  -  -  -  -  -  -  -  -  -  -  -|      |            |
+         |        |                                   |      |            |
+         |        |POST
+         |        |large                              |      |            |
+         |        |----------------------------------&gt;|      |            |
+         |        |                                   |      |            |
+         |        |receive large submission URI       |      |            |
+         |        |&lt;-  -  -  -  -  -  -  -  -  -  -  -|      |            |
          </pre>
 <p class="figure">Figure 8</p>
 <h1 id="rfc.section.10.5">
