tweak the wording to remove DUT and replace with crypto module to be more accurate

--- a/artifacts/draft-fussell-acvp-spec-00.html
+++ b/artifacts/draft-fussell-acvp-spec-00.html
@@ -472,7 +472,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed., Vassilev, A., Ed., and H. Booth" />
   <meta name="dct.identifier" content="urn:ietf:id:draft-fussell-acvp-spec-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2019-1-21" />
+  <meta name="dct.issued" scheme="ISO8601" content="2019-2-10" />
   <meta name="dct.abstract" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the algorithm implementations in the cryptographic module with a validation authority." />
   <meta name="description" content="The ACV Protocol provides a method for communication between a cryptographic module that is embedded inside of a device or otherwise running on a platform accessible via computer network, and an external testing system, using standard network communication interfaces and protocols. This communication protocol can also be used to validate the correctness of the algorithm implementations in the cryptographic module with a validation authority." />
 
@@ -496,7 +496,7 @@
   <td class="right">A. Vassilev, Ed.</td>
 </tr>
 <tr>
-  <td class="left">Expires: July 25, 2019</td>
+  <td class="left">Expires: August 14, 2019</td>
   <td class="right">H. Booth</td>
 </tr>
 <tr>
@@ -505,7 +505,7 @@
 </tr>
 <tr>
   <td class="left"></td>
-  <td class="right">January 21, 2019</td>
+  <td class="right">February 10, 2019</td>
 </tr>
 
     	
@@ -525,7 +525,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on July 25, 2019.</p>
+<p>This Internet-Draft will expire on August 14, 2019.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -772,7 +772,7 @@
   <li>Response - The JSON from the client providing the desired cryptographic output for each of the Test Cases defined in the corresponding Prompt file. These are linked via the Test Vector Set vsId. As exactly one prompt exists for each vsId, one response will exist for each prompt.</li>
   <li>Disposition - The JSON from the server after the Response is submitted by the client detailing the correctness of the Test Cases. A "passed" disposition indicates that the particular algorithm in the Test Vector Set is ready for validation.</li>
   <li>OE - Operational Environment - The specific hardware and/or software the client's cryptographic implementation uses to run.</li>
-  <li>Realtime - For the purposes of this document realtime is defined as the client receiving a vector set and immediately performing the tests and returning the results to the server. In general, this is a case where the ACVP client and DUT reside in the same box and directly commicate with each other. Non-realtime would refer to the case where the client may gather vector sets from the server and through some means introduce them to the DUT gather the results and send them back to the server.  In general, this is a case where the DUT cannot communicate directly with the ACVP client.</li>
+  <li>Realtime - For the purposes of this document realtime is defined as the client receiving a vector set and immediately performing the tests and returning the results to the server. In general, this is a case where the ACVP client and crypto module reside in the same box and directly communicate with each other. Non-realtime would refer to the case where the client may gather vector sets from the server and through some means introduce them to the crypto module gather the results and send them back to the server.  In general, this is a case where the device hosting the crypto module cannot communicate directly with the ACVP client.</li>
 </ul>
 
 <p> </p>
