--- a/artifacts/draft-celi-sha3-00.html
+++ b/artifacts/draft-celi-sha3-00.html
@@ -406,7 +406,7 @@
 
   <meta name="dct.creator" content="Celi, C., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsha3-0.5" />
-  <meta name="dct.issued" scheme="ISO8601" content="2018-11-08" />
+  <meta name="dct.issued" scheme="ISO8601" content="2019-02-13" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using SHA3 and SHAKE with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using SHA3 and SHAKE with the ACVP specification." />
 
@@ -427,10 +427,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Informational</td>
-<td class="right">November 8, 2018</td>
+<td class="right">February 13, 2019</td>
 </tr>
 <tr>
-<td class="left">Expires: May 12, 2019</td>
+<td class="left">Expires: August 17, 2019</td>
 <td class="right"></td>
 </tr>
 
@@ -447,9 +447,9 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at https://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on May 12, 2019.</p>
+<p>This Internet-Draft will expire on August 17, 2019.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
-<p>Copyright (c) 2018 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
+<p>Copyright (c) 2019 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (https://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
 
   
@@ -524,12 +524,12 @@
 <p></p>
 
 <ul>
-<li>SHA3-224</li>
-<li>SHA3-256</li>
-<li>SHA3-384</li>
-<li>SHA3-512</li>
-<li>SHAKE-128</li>
-<li>SHAKE-256</li>
+<li>ACVP-SHA3-224</li>
+<li>ACVP-SHA3-256</li>
+<li>ACVP-SHA3-384</li>
+<li>ACVP-SHA3-512</li>
+<li>ACVP-SHAKE-128</li>
+<li>ACVP-SHAKE-256</li>
 </ul>
 
 <p> </p>
@@ -562,7 +562,7 @@
 <h1 id="rfc.section.4">
 <a href="#rfc.section.4">4.</a> <a href="#caps_reg" id="caps_reg">Capabilities Registration</a>
 </h1>
-<p id="rfc.section.4.p.1">This section describes the constructs for advertising support of block cipher algorithms to the ACVP server. ACVP REQURIES cryptographic modules to register their capabilities in a registration.  This allows the cryptographic module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process.  </p>
+<p id="rfc.section.4.p.1">This section describes the constructs for advertising support of block cipher algorithms to the ACVP server. ACVP REQUIRES cryptographic modules to register their capabilities in a registration.  This allows the cryptographic module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process.  </p>
 <p id="rfc.section.4.p.2">The SHA3 and SHAKE capabilities MUST be advertised as JSON objects within the 'algorithms' value of the ACVP registration message. The 'algorithms' value MUST be an array, where each array element is an individual JSON object defined in this section. The 'algorithms' value MUST be part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP Protocol Specification Section XXX for details on the registration message.  Each SHA3 and SHAKE algorithm capability advertised SHALL be a self-contained JSON object.  </p>
 <p id="rfc.section.4.p.3">Each algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for hash algorithm capabilities: </p>
 <h1 id="rfc.section.4.1">
@@ -874,7 +874,7 @@
 <tr>
 <td class="reference"><b id="ACVP">[ACVP]</b></td>
 <td class="top">
-<a title="NIST">authSurName, authInitials.</a>, "<a>ACVP Specification</a>", 2016.</td>
+<a title="Cisco">Fussell, BF.</a>, "<a>ACVP Specification</a>", 2019.</td>
 </tr>
 <tr>
 <td class="reference"><b id="RFC2119">[RFC2119]</b></td>
@@ -896,7 +896,7 @@
 <pre>
 					
 {
-	"algorithm": "SHA3-256",
+	"algorithm": "ACVP-SHA3-256",
 	"inBit": true,
 	"inEmpty": true
 }
@@ -906,14 +906,14 @@
 <pre>
 					
 {
-	"algorithm": "SHAKE-128",
+	"algorithm": "ACVP-SHAKE-128",
 	"inBit": true,
 	"inEmpty": true,
 	"outBit": true,
-	"outLength": {
+	"outLength": [{
 		"min": 16,
 		"max": 1024
-	}
+	}]
 }
 
 				</pre>
@@ -927,7 +927,7 @@
     { "acvVersion": &lt;acvp-version&gt; },
     { 
         "vsId": 1564,
-  	    "algorithm": "SHA3-512",
+  	    "algorithm": "ACVP-SHA3-512",
   	    "testGroups": [
   	    {
             "tgId": 1,
@@ -954,7 +954,7 @@
     { "acvVersion": &lt;acvp-version&gt; },
     { 
         "vsId": 1564,
-        "algorithm": "SHA3-256",
+        "algorithm": "ACVP-SHA3-256",
         "testGroups": [
         {
             "tgId": 1,
@@ -981,7 +981,7 @@
     { "acvVersion": &lt;acvp-version&gt; },
     { 
         "vsId": 1564,
-        "algorithm": "SHA3-384",
+        "algorithm": "ACVP-SHA3-384",
         "testGroups": [
         {
             "tgId": 2,
@@ -1058,7 +1058,7 @@
     { "acvVersion": &lt;acvp-version&gt; },
     { 
         "vsId": 1564,
-        "algorithm": "SHAKE-128",
+        "algorithm": "ACVP-SHAKE-128",
         "testGroups": [
         {
             "tgId": 1,
